; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_common/extr_eap_gpsk_common.c_eap_gpsk_compute_mic.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_common/extr_eap_gpsk_common.c_eap_gpsk_compute_mic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EAP_GPSK_VENDOR_IETF = common dso_local global i32 0, align 4
@MSG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [55 x i8] c"EAP-GPSK: Unknown cipher %d:%d used in MIC computation\00", align 1
@.str.1 = private unnamed_addr constant [32 x i8] c"EAP-GPSK: Could not compute MIC\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @eap_gpsk_compute_mic(i32* %0, i64 %1, i32 %2, i32 %3, i32* %4, i64 %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i64, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i64 %1, i64* %10, align 8
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32* %4, i32** %13, align 8
  store i64 %5, i64* %14, align 8
  store i32* %6, i32** %15, align 8
  %17 = load i32, i32* %11, align 4
  %18 = load i32, i32* @EAP_GPSK_VENDOR_IETF, align 4
  %19 = icmp ne i32 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %7
  store i32 -1, i32* %8, align 4
  br label %43

21:                                               ; preds = %7
  %22 = load i32, i32* %12, align 4
  switch i32 %22, label %30 [
    i32 129, label %23
  ]

23:                                               ; preds = %21
  %24 = load i32*, i32** %9, align 8
  %25 = load i64, i64* %10, align 8
  %26 = load i32*, i32** %13, align 8
  %27 = load i64, i64* %14, align 8
  %28 = load i32*, i32** %15, align 8
  %29 = call i32 @eap_gpsk_compute_mic_aes(i32* %24, i64 %25, i32* %26, i64 %27, i32* %28)
  store i32 %29, i32* %16, align 4
  br label %35

30:                                               ; preds = %21
  %31 = load i32, i32* @MSG_DEBUG, align 4
  %32 = load i32, i32* %11, align 4
  %33 = load i32, i32* %12, align 4
  %34 = call i32 (i32, i8*, ...) @wpa_printf(i32 %31, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0), i32 %32, i32 %33)
  store i32 -1, i32* %16, align 4
  br label %35

35:                                               ; preds = %30, %23
  %36 = load i32, i32* %16, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %35
  %39 = load i32, i32* @MSG_DEBUG, align 4
  %40 = call i32 (i32, i8*, ...) @wpa_printf(i32 %39, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0))
  br label %41

41:                                               ; preds = %38, %35
  %42 = load i32, i32* %16, align 4
  store i32 %42, i32* %8, align 4
  br label %43

43:                                               ; preds = %41, %20
  %44 = load i32, i32* %8, align 4
  ret i32 %44
}

declare dso_local i32 @eap_gpsk_compute_mic_aes(i32*, i64, i32*, i64, i32*) #1

declare dso_local i32 @wpa_printf(i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
